<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SDKDemo</string>
    
    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">刷新</string>
    <string name="public_return">返回</string>
    <string name="dialog_ok">确定</string>
    <string name="read_data_err">读取数据错误</string>
    
    
    <string name="input_certno_tip">请输入证件号</string>
    <string name="tkt_error">票号不能为空</string>
    <string name="phone_empty_error">手机号码不能为空</string>
    <string name="phone_length_error">手机号码输入错误</string>
    <string name="get_vericode_fail_title">获取验证码失败</string>
    <string name="get_vericode_success_title">验证码已经发送</string>
    <string name="vericode_input_error_title">验证码输入错误</string>
    
    <string name="common_error_title">错误</string>
    <string name="common_error_jsonparse">返回数据错误，json解析失败</string>
    
    <string name="input_cert_type_hint">请选择证件类型</string>
    <string name="input_tkt_no_hint">请输入票号</string>
    <string name="input_flight_no_hint">请输入航班号</string>
    <string name="input_mobile_no_hint">用于接收值机短信</string>
    <string name="regist_auth_no_hint">填写验证码</string>
    <string name="regist_get_auth_no">获取验证码</string>
    
    <string name="check_in_info_name">乘机人</string>
    <string name="check_in_info_seat">已选</string>
    <!-- 登机牌 -->
    <string name="getcheckin_error">对不起，读取值机数据错误。</string>
    <string name="boarding_pass_error">对不起,登机牌数据错误。</string>
    <string name="boarding_card">登机牌</string>
    <string name="my_journey_checkin">值机</string>
    <string name="no_boarding_card">该航班暂不支持电子登机牌</string>
    <string name="ensure">确定</string>
    <string name="utillist_airlines">航空公司</string>
    <string name="card_num">卡 号</string>
    
    <string name="cancel_cki_url_error">取消页面打开失败</string>
    <string name="net_work_error">网络异常</string>
    
    <dimen name="cki_boardingcard_left_padding">19dp</dimen>
    <dimen name="cki_boardingcard_left_middle_padding">29dp</dimen>
    <dimen name="cki_boardingcard_left_large_padding">50dp</dimen>

</resources>